--- a/Project Machine Learning in Business.ipynb
+++ b/Project Machine Learning in Business.ipynb
@@ -54,9 +54,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    data_0 = pd.read_csv('https://code.s3.yandex.net/datasets/geo_data_0.csv')\n",
-    "    data_1 = pd.read_csv('https://code.s3.yandex.net/datasets/geo_data_1.csv')\n",
-    "    data_2 = pd.read_csv('https://code.s3.yandex.net/datasets/geo_data_2.csv')\n",
+    "    data_0 = pd.read_csv('/datasets/geo_data_0.csv')\n",
+    "    data_1 = pd.read_csv('/datasets/geo_data_1.csv')\n",
+    "    data_2 = pd.read_csv('/datasets/geo_data_2.csv')\n",
     "except:\n",
     "    data_0 = pd.read_csv('/datasets/geo_data_0.csv')\n",
     "    data_1 = pd.read_csv('/datasets/geo_data_1.csv')\n",
@@ -1892,7 +1892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
